--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="searchIcon">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
-                <input type="text" placeholder="Search for Products, Brands, Accese and" class="searchInput">
+                <input type="text" placeholder="Search for Products, Brands and More" class="searchInput">
             </div>
             <div class="nav-sec">
                 <div class="nav-log">
